// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Default > matches the snapshot 1`] = `"<div class="centerAll preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>"`;

exports[`Default > when image prop is set to a IMAGE_DEFAULT_BY_TYPE icon > when image prop is set to PhApplePodcastsLogo > matches the snapshot 1`] = `
"<div class="centerAll preloadImage">
  <div class="iconImage">
    <phapplepodcastslogo class="icon"></phapplepodcastslogo>
  </div>
</div>"
`;

exports[`Default > when image prop is set to a IMAGE_DEFAULT_BY_TYPE icon > when image prop is set to PhApplePodcastsLogo > matches the snapshot 2`] = `
"<div class="centerAll preloadImage">
  <div class="iconImage">
    <phapplepodcastslogo class="icon"></phapplepodcastslogo>
  </div>
</div>"
`;

exports[`Default > when image prop is set to a IMAGE_DEFAULT_BY_TYPE icon > when image prop is set to PhArrowURightUp > matches the snapshot 1`] = `
"<div class="centerAll preloadImage">
  <div class="iconImage">
    <pharrowurightup class="icon"></pharrowurightup>
  </div>
</div>"
`;

exports[`Default > when image prop is set to a IMAGE_DEFAULT_BY_TYPE icon > when image prop is set to PhFolder > matches the snapshot 1`] = `
"<div class="centerAll preloadImage">
  <div class="iconImage">
    <phfolder class="icon"></phfolder>
  </div>
</div>"
`;

exports[`Default > when image prop is set to a IMAGE_DEFAULT_BY_TYPE icon > when image prop is set to PhInfo > matches the snapshot 1`] = `
"<div class="centerAll preloadImage">
  <div class="iconImage">
    <phinfo class="icon"></phinfo>
  </div>
</div>"
`;

exports[`Default > when image prop is set to a IMAGE_DEFAULT_BY_TYPE icon > when image prop is set to PhMusicNotes > matches the snapshot 1`] = `
"<div class="centerAll preloadImage">
  <div class="iconImage">
    <phmusicnotes class="icon"></phmusicnotes>
  </div>
</div>"
`;

exports[`Default > when image prop is set to a IMAGE_DEFAULT_BY_TYPE icon > when image prop is set to PhPlaylist > matches the snapshot 1`] = `
"<div class="centerAll preloadImage">
  <div class="iconImage">
    <phplaylist class="icon"></phplaylist>
  </div>
</div>"
`;

exports[`Default > when image prop is set to a IMAGE_DEFAULT_BY_TYPE icon > when image prop is set to PhRadio > matches the snapshot 1`] = `
"<div class="centerAll preloadImage">
  <div class="iconImage">
    <phradio class="icon"></phradio>
  </div>
</div>"
`;

exports[`Default > when image prop is set to a IMAGE_DEFAULT_BY_TYPE icon > when image prop is set to PhUsersThree > matches the snapshot 1`] = `
"<div class="centerAll preloadImage">
  <div class="iconImage">
    <phusersthree class="icon"></phusersthree>
  </div>
</div>"
`;

exports[`Default > when image prop is set to a IMAGE_DEFAULT_BY_TYPE icon > when image prop is set to PhVinylRecord > matches the snapshot 1`] = `
"<div class="centerAll preloadImage">
  <div class="iconImage">
    <phvinylrecord class="icon"></phvinylrecord>
  </div>
</div>"
`;

exports[`Default > when image prop is set to a IMAGE_DEFAULT_BY_TYPE icon > when image prop is set to PhWaveform > matches the snapshot 1`] = `
"<div class="centerAll preloadImage">
  <div class="iconImage">
    <phwaveform class="icon"></phwaveform>
  </div>
</div>"
`;

exports[`Default > when image prop is set to a IMAGE_DEFAULT_BY_TYPE icon > when image prop is set to PhWaveformSlash > matches the snapshot 1`] = `
"<div class="centerAll preloadImage">
  <div class="iconImage">
    <phwaveformslash class="icon"></phwaveformslash>
  </div>
</div>"
`;

exports[`Default > when image prop is set to a none IMAGE_DEFAULT_BY_TYPE icon > when alt prop is set to true > matches the snapshot 1`] = `"<div class="centerAll preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Alt text for image" style="display: none;"></div>"`;

exports[`Default > when image prop is set to a none IMAGE_DEFAULT_BY_TYPE icon > when image has finished loading > matches the snapshot 1`] = `"<div class="centerAll preloadImage"><span class="imageLoader" style="display: none;"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image"></div>"`;

exports[`Default > when image prop is set to a none IMAGE_DEFAULT_BY_TYPE icon > when image prop is a URL > matches the snapshot 1`] = `"<div class="centerAll preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="https://test.com" alt="Image" style="display: none;"></div>"`;
